--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Space Scientist</div>
+            <div class="role brown-text text-darken-2">Space Scientist, Human Factors Engineering Entity</div>
             <ul>
               <li>
                 <b>PROJECT 1: Designed active control system that alleviated water impact loads on Crew Module during parachute descent phase of atmospheric re-entry</b>
@@ -917,7 +917,7 @@
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Semantic SLAM" src="/assets/img/project_gifs/particlefilterslam.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Particle Filter SLAM" src="/assets/img/project_gifs/particlefilterslam.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Semantic SLAM<i
@@ -1089,7 +1089,7 @@
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Phone Detection" src="/assets/img/projects_gifs/objectdetection.jpg" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Phone Detection" src="/assets/img/projects_gifs/objectdetection.jpg" style="height: 50%; width: 50%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Phone Detector<i
