--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
            <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Autonomous Navigation" src="/assets/img/project_gifs/RL.gif.mp4" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Autonomous Navigation" src="/assets/img/project_gifs/RL.gif" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Autonomous Navigation<i
