--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Saurabh
-        Mirani</a><span class="black-text">Roboticist</span>
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Prithwiraj
+        Paul</a><span class="black-text">Roboticist</span>
     </div>
   </nav>
 
@@ -421,7 +421,7 @@
         <!-- Symbotic -->
         <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
-            <img alt="Online Trajectory Generation" src="/assets/img/project_gifs/Symbotic.gif" style="height: 50%; width: 50%" class="activator" />
+            <img alt="Online Trajectory Generation" src="/assets/img/project_gifs/Symbotic.gif" style="height: 30%; width: 30%" class="activator" />
           </div>
           <div class="card-content">
             <div class="row">
@@ -477,7 +477,7 @@
         <!-- ISRO -->
         <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
-            <img alt="Manned Spacecraft Re-entry" src="/assets/img/project_gifs/ISRO.png" style="height: 50%; width: 50%" class="activator" />
+            <img alt="Manned Spacecraft Re-entry" src="/assets/img/project_gifs/ISRO.png" style="height: 30%; width: 30%" class="activator" />
           </div>
           <div class="card-content">
             <div class="row">
@@ -917,10 +917,10 @@
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Particle Filter SLAM" src="/assets/img/project_gifs/particlefilterslam.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Particle-Filter SLAM" src="/assets/img/project_gifs/particlefilterslam.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Semantic SLAM<i
+                <span class="card-title activator teal-text hoverline">Particle Filter SLAM<i
                     class="details-style right">Details ></i></span>
                 <p>
                   LiDAR-based Particle Filter SLAM
@@ -1089,7 +1089,7 @@
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Phone Detection" src="/assets/img/projects_gifs/objectdetection.jpg" style="height: 50%; width: 50%" class="activator" />
+                <img alt="Phone Detection" src="/assets/img/project_gifs/objectdetection.jpg" style="height: 50%; width: 50%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Phone Detector<i
@@ -1211,7 +1211,7 @@
                 <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />OpenCV
               </div>
               <div class="col s4 m2 row">
-                <img alt="" src="/assets/img/projects_gifs/opengl.jpeg" class="responsive-img" />OpenGL
+                <img alt="" src="/assets/img/project_gifs/opengl.jpeg" class="responsive-img" />OpenGL
               </div>
               <div class="col s4 m2 row">
                 <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
@@ -1447,7 +1447,7 @@
         <p>
           <a aria-label="Call Prithwiraj" data-position="top" data-tooltip="Call Prithwiraj"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Saurabh">+1 (858) 241-9119</a></a>
+              aria-label="Call Prithwiraj">+1 (858) 241-9119</a></a>
         </p>
         <p>
           <a aria-label="Email Prithwiraj" href="mailto:p1paul@ucsd.edu" target="_blank" data-position="top"
