--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img id="myImg" src="/assets/img/project_gifs/profilepic.jpg" class="circle img-responsive profile-pic" alt="Prithwiraj Paul" style="width:100%;max-width:300px">
+          <img id="myImg" src="/assets/img/project_gifs/profilepic.jpg" class="circle img-responsive profile-pic" alt="Prithwiraj Paul">
         </a>
       </li>
       <!-- <img id="myImg" src="img_snow.jpg" alt="Snow" style="width:100%;max-width:300px"> -->
@@ -189,10 +189,6 @@
             class="mdi-av-my-library-books small"></i><span>Projects</span></a>
       </li>
 
-      <li class="bold">
-        <a aria-label="Navigate to the Publications section" href="#publications" class="waves-effect waves-dark teal-text"><i
-            class="mdi-action-book small"></i><span>Publications</span></a>
-      </li>
 
       <li class="bold">
         <a aria-label="Navigate to the Teaching section" href="#teaching" class="waves-effect waves-dark teal-text"><i
@@ -262,7 +258,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="profile-pic-small-only grey-blue-text">
-          <img id="myImgSmall" src="/assets/img/biopic.jpg" class="circle img-responsive profile-pic" alt="Prithwiraj Paul">
+          <img id="myImgSmall" src="/assets/img/project_gifs/profilepic.jpg" class="circle img-responsive profile-pic" alt="Prithwiraj Paul">
         </a>
       </li>
 
@@ -308,10 +304,6 @@
       <li class="bold">
         <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
             class="mdi-av-my-library-books small"></i><span>Projects</span></a>
-      </li>
-      <li class="bold">
-        <a aria-label="Navigate to the Publications section" href="#publications" class="waves-effect waves-dark teal-text"><i
-            class="mdi-action-book small"></i><span>Publications</span></a>
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Teaching section" href="#teaching" class="waves-effect waves-dark teal-text"><i
