--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img id="myImg" src="/assets/img/project_gifs/profilepic.jpg" class="responsive-img center-block" alt="Prithwiraj Paul">
+          <img id="myImg" src="/assets/img/project_gifs/profilepic.jpg" class="circle img-responsive profile-pic" alt="Prithwiraj Paul">
         </a>
       </li>
       <!-- <img id="myImg" src="img_snow.jpg" alt="Snow" style="width:100%;max-width:300px"> -->
